# dory

./: .gitignore  README.md  meson.build
.github/workflows/: build.yml
action-layout-editor/: dory-action-layout-editor.in  dory_action_layout_editor.py  meson.build  nemo_action_layout_editor.py
data/: dbus-interfaces.xml  dory-autorun-software.desktop.in  dory-autostart.desktop.in  dory.FileManager1.service.in  dory.desktop.in  dory.service.in  dory.xml.in  dory_action.lang  dory_search_helper.lang  meson.build  nemo-autostart.desktop.in  nemo.service.in  org.Dory.FileChooser.service.in  org.Dory.FileChooser.xml  org.dory.root.policy.in  org.nemo.root.policy.in
data/dory-actions/: 90_new-launcher.dory_action.in  90_new-workspace.dory_action.in  91_delete-workspace.dory_action.in  92_show-expo.dory_action.in  action_i18n_strings.py  add-desklets.dory_action.in  change-background.dory_action.in  extract_action_strings  merge_action_strings  mount-archive.dory_action.in  set-as-background.dory_action.in  set-resolution.dory_action.in
data/icons/: meson.build
debian/: changelog  control  copyright  dory-data.install  dory.install  dory.links  dory.lintian-overrides  libdory-extension-dev.install  libdory-extension1.install  libdory-extension1.symbols  not-installed  rules
docs/: dory-connect-server.1  dory-desktop.1  dory.1  meson.build
docs/reference/: meson.build
docs/reference/libdory-extension/: libdory-extension-docs.xml  libdory-extension-sections.txt  meson.build  version.xml.in
docs/reference/libnemo-extension/: libnemo-extension-docs.xml  libnemo-extension-sections.txt
eel/: eel-accessibility.c  eel-gtk-extensions.c  eel-vfs-extensions.h
files/: meson.build
files/usr/share/dory/: action-info.md  script-info.md
gresources/: dory-action-layout-editor.gresource.xml  dory-file-chooser-dialog.glade  dory-shell-ui.xml  dory.gresource.xml  meson.build  nemo-action-layout-editor.gresource.xml  nemo.gresource.xml
libdory-extension/: dory-column-provider.c  dory-column-provider.h  dory-column.c  dory-column.h  dory-desktop-preferences.c  dory-desktop-preferences.h  dory-extension-i18n.h  dory-extension-private.h  dory-extension-types.h  dory-file-info.c  dory-file-info.h  dory-info-provider.c  dory-info-provider.h  dory-location-widget-provider.c  dory-location-widget-provider.h  dory-menu-item.c  dory-menu-item.h  dory-menu-provider.c  dory-menu-provider.h  dory-menu.c  dory-menu.h  dory-name-and-desc-provider.c  dory-name-and-desc-provider.h  dory-property-page-provider.c  dory-property-page-provider.h  dory-property-page.c  dory-property-page.h  dory-simple-button.c  dory-simple-button.h  meson.build  nemo-column-provider.h  nemo-column.c  nemo-column.h  nemo-desktop-preferences.c  nemo-file-info.c  nemo-info-provider.h  nemo-location-widget-provider.h  nemo-menu-item.c  nemo-menu-provider.h  nemo-menu.c  (+6 more)
libdory-private/: dory-action-manager.c  dory-action-manager.h  dory-action-symbols.h  dory-action.c  dory-action.h  dory-bookmark.c  dory-bookmark.h  dory-cell-renderer-disk.c  dory-cell-renderer-disk.h  dory-centered-placement-grid.c  dory-clipboard-monitor.c  dory-clipboard-monitor.h  dory-clipboard.c  dory-clipboard.h  dory-column-chooser.c  dory-column-chooser.h  dory-column-utilities.c  dory-column-utilities.h  dory-dbus-manager.c  dory-dbus-manager.h  dory-debug.c  dory-debug.h  dory-default-file-icon.c  dory-default-file-icon.h  dory-desktop-directory-file.c  dory-desktop-directory-file.h  dory-desktop-directory.c  dory-desktop-directory.h  dory-desktop-icon-file.c  dory-desktop-icon-file.h  dory-desktop-link-monitor.c  dory-desktop-link-monitor.h  dory-desktop-link.c  dory-desktop-link.h  dory-desktop-metadata.c  dory-desktop-metadata.h  dory-desktop-utils.c  dory-desktop-utils.h  dory-directory-async.c  dory-directory-notify.h  (+174 more)
po/: POTFILES.in
search-helpers/: meson.build
src/: check-dory  dory-action-config-widget.c  dory-action-config-widget.h  dory-actions.h  dory-application.c  dory-application.h  dory-autorun-software.c  dory-blank-desktop-window.c  dory-blank-desktop-window.h  dory-bookmark-list.c  dory-bookmark-list.h  dory-bookmarks-window.c  dory-bookmarks-window.h  dory-config-base-widget.c  dory-config-base-widget.h  dory-connect-server-dialog-main.c  dory-connect-server-dialog-nonmain.c  dory-connect-server-dialog.c  dory-connect-server-dialog.h  dory-connect-server-operation.c  dory-connect-server-operation.h  dory-desktop-application.c  dory-desktop-application.h  dory-desktop-icon-grid-view.c  dory-desktop-icon-grid-view.h  dory-desktop-icon-view.c  dory-desktop-icon-view.h  dory-desktop-item-properties.c  dory-desktop-item-properties.h  dory-desktop-main.c  dory-desktop-manager.c  dory-desktop-manager.h  dory-desktop-overlay.c  dory-desktop-overlay.h  dory-desktop-window.c  dory-desktop-window.h  dory-empty-view.c  dory-empty-view.h  dory-error-reporting.c  dory-error-reporting.h  (+189 more)
test/: meson.build  test-copy.c  test-nemo-directory-async.c  test-nemo-search-engine.c  test.h
